// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should do the initial traversal correctly 1`] = `
TestGraph {
  "dependencies": Map {
    "/bundle" => Object {
      "dependencies": Map {
        "C+7Hteo/D9vJXQ3UfzxbwnXaijM=" => Object {
          "absolutePath": "/foo",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "key": "C+7Hteo/D9vJXQ3UfzxbwnXaijM=",
              "locs": Array [],
            },
            "name": "foo",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Array [],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bundle",
      "unstable_transformResultKey": "/bundle (revision 0)",
    },
    "/foo" => Object {
      "dependencies": Map {
        "Ys23Ag/5IOWqZCw9QGaVDdHwH00=" => Object {
          "absolutePath": "/bar",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "key": "Ys23Ag/5IOWqZCw9QGaVDdHwH00=",
              "locs": Array [],
            },
            "name": "bar",
          },
        },
        "u+lgol6jEdIdQGaek98gA7qbkKI=" => Object {
          "absolutePath": "/baz",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "key": "u+lgol6jEdIdQGaek98gA7qbkKI=",
              "locs": Array [],
            },
            "name": "baz",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Array [
        "/bundle",
      ],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/foo",
      "unstable_transformResultKey": "/foo (revision 0)",
    },
    "/bar" => Object {
      "dependencies": Map {},
      "getSource": [Function],
      "inverseDependencies": Array [
        "/foo",
      ],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bar",
      "unstable_transformResultKey": "/bar (revision 0)",
    },
    "/baz" => Object {
      "dependencies": Map {},
      "getSource": [Function],
      "inverseDependencies": Array [
        "/foo",
      ],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/baz",
      "unstable_transformResultKey": "/baz (revision 0)",
    },
  },
  "entryPoints": Set {
    "/bundle",
  },
  "transformOptions": Object {
    "dev": false,
    "hot": false,
    "minify": false,
    "platform": null,
    "type": "module",
    "unstable_transformProfile": "default",
  },
}
`;

exports[`should not traverse past the initial module if \`shallow\` is passed 1`] = `
TestGraph {
  "dependencies": Map {
    "/bundle" => Object {
      "dependencies": Map {
        "C+7Hteo/D9vJXQ3UfzxbwnXaijM=" => Object {
          "absolutePath": "/foo",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "key": "C+7Hteo/D9vJXQ3UfzxbwnXaijM=",
              "locs": Array [],
            },
            "name": "foo",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Array [],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bundle",
      "unstable_transformResultKey": "/bundle (revision 0)",
    },
  },
  "entryPoints": Set {
    "/bundle",
  },
  "transformOptions": Object {
    "dev": false,
    "hot": false,
    "minify": false,
    "platform": null,
    "type": "module",
    "unstable_transformProfile": "default",
  },
}
`;
